Getting all the requirements working

--- a/gallery.html
+++ b/gallery.html
@@ -31,32 +31,46 @@
         </ul>
     </nav>
     <main>
-        <div id="projectgrid" class="images">
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+        <figure>
+            <div id="projectgrid" class="images">
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                        <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                    </alt>
+                </div>
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        </alt>
+                </div>
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        </alt>
+                </div>
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        </alt>
+                </div>
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        </alt>
+                </div>
+                <div id="george">
+                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <alt>
+                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        </alt>
+                </div>
             </div>
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-            <div id="george">
-                <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-        </div>
+        </figure>
     </main>
 </body>
 <!--Footer-->
