--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
                 <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
                 <li>It is healthier to cook</li>
             </ol>
+            <figure>
             <div id="george">
                 <img id="food" src="images/Temaki_HERO_021320_440.jpg">
                 <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
             </div>
-
         </div>
+    </figure>
         <p class="links"> Before we start we should mention that all the recipes here are made for people who are <a
                 href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
                 href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
