Working on Gallery

--- a/gallery.html
+++ b/gallery.html
@@ -34,21 +34,21 @@
         <figure>
             <div id="projectgrid" class="images">
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <img id="tile" src="images/DEATH1.jpg">
                         <alt>
-                        <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                        <figcaption id="caption"> Red Kool-aid and Spirit </figcaption>
                     </alt>
                 </div>
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <img id="tile" src="images/BlessingMixA.jpg">
                         <alt>
-                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                            <figcaption id="caption"> A favorite thanksgiving tradition </figcaption>
                         </alt>
                 </div>
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
+                        <img id="tile" src="images/BreadA.jpg">
                         <alt>
-                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
+                            <figcaption id="caption"> Mom's French Bread </figcaption>
                         </alt>
                 </div>
                 <div id="george">
