--- a/gallery.html
+++ b/gallery.html
@@ -31,46 +31,96 @@
         </ul>
     </nav>
     <main>
-        <figure>
-            <div id="projectgrid" class="images">
+        <div id="projectgrid" class="images">
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/DEATH1.jpg">
-                        <alt>
+                    <img id="tile" src="images/DEATH1.jpg">
+                    <alt>
                         <figcaption id="caption"> Red Kool-aid and Spirit </figcaption>
                     </alt>
                 </div>
+            </figure>
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/BlessingMixA.jpg">
-                        <alt>
-                            <figcaption id="caption"> A favorite thanksgiving tradition </figcaption>
-                        </alt>
+                    <img id="tile" src="images/BlessingMixA.jpg">
+                    <alt>
+                        <figcaption id="caption"> A favorite thanksgiving tradition </figcaption>
+                    </alt>
                 </div>
+            </figure>
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/BreadA.jpg">
-                        <alt>
-                            <figcaption id="caption"> Mom's French Bread </figcaption>
-                        </alt>
+                    <img id="tile" src="images/BreadA.jpg">
+                    <alt>
+                        <figcaption id="caption"> Mom's French Bread </figcaption>
+                    </alt>
                 </div>
+            </figure>
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                        <alt>
-                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-                        </alt>
+                    <img id="tile" src="images/CookieA.jpg">
+                    <alt>
+                        <figcaption id="caption"> Sugar Cookies fun decorations </figcaption>
+                    </alt>
                 </div>
+            </figure>
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                        <alt>
-                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-                        </alt>
+                    <img id="tile" src="images/Donut Burger.jpg">
+                    <alt>
+                        <figcaption id="caption"> found at a small cafe in Rockwood TN </figcaption>
+                    </alt>
                 </div>
+            </figure>
+            <figure id="figure">
                 <div id="george">
-                        <img id="tile" src="images/Temaki_HERO_021320_440.jpg">
-                        <alt>
-                            <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-                        </alt>
+                    <img id="tile" src="images/EGGs.jpg">
+                    <alt>
+                        <figcaption id="caption"> What happens when an egg is boiled and slightly cracked </figcaption>
+                    </alt>
                 </div>
-            </div>
-        </figure>
+            </figure>
+            <figure id="figure">
+                <div id="george">
+                    <img id="tile" src="images/Healthy.jpg">
+                    <alt>
+                        <figcaption id="caption"> Salmon dinner </figcaption>
+                    </alt>
+                </div>
+            </figure>
+            <figure id="figure">
+                <div id="george">
+                    <img id="tile" src="images/pineapple.jpg">
+                    <alt>
+                        <figcaption id="caption"> Fruit salad in a pineapple </figcaption>
+                    </alt>
+                </div>
+            </figure>
+            <figure id="figure">
+                <div id="george">
+                    <img id="tile" src="images/pizza.jpg">
+                    <alt>
+                        <figcaption id="caption"> Pizza on a too small pan </figcaption>
+                    </alt>
+                </div>
+            </figure>
+            <figure id="figure">
+                <div id="george">
+                    <img id="tile" src="images/Veggies.jpg">
+                    <alt>
+                        <figcaption id="caption"> Cooked Veggies </figcaption>
+                    </alt>
+                </div>
+            </figure>
+            <figure id="figure">
+                <div id="george">
+                    <img id="tile" src="images/SamonA.jpg">
+                    <alt>
+                        <figcaption id="caption"> Lemon Salmon</figcaption>
+                    </alt>
+                </div>
+            </figure>
+        </div>
     </main>
 </body>
 <!--Footer-->
