Fixed ALT and spelling

--- a/gallery.html
+++ b/gallery.html
@@ -34,90 +34,68 @@
         <div id="projectgrid" class="images">
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/DEATH1.jpg">
-                    <alt>
-                        <figcaption id="caption"> Red Kool-aid and Spirit </figcaption>
-                    </alt>
+                    <img id="tile" src="images/DEATH1.jpg" alt="Red Kool-aid and Sprite">
+                        <figcaption id="caption"> Red Kool-aid and Sprite </figcaption>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/BlessingMixA.jpg">
-                    <alt>
+                    <img id="tile" src="images/BlessingMixA.jpg" alt="A favorite thanksgiving tradition">
                         <figcaption id="caption"> A favorite thanksgiving tradition </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/BreadA.jpg">
-                    <alt>
+                    <img id="tile" src="images/BreadA.jpg" alt="Mom's French Bread">
                         <figcaption id="caption"> Mom's French Bread </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/CookieA.jpg">
-                    <alt>
-                        <figcaption id="caption"> Sugar Cookies fun decorations </figcaption>
-                    </alt>
+                    <img id="tile" src="images/CookieA.jpg" alt="Sugar Cookies with fun decorations">
+                        <figcaption id="caption"> Sugar Cookies with fun decorations </figcaption>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/Donut Burger.jpg">
-                    <alt>
+                    <img id="tile" src="images/Donut Burger.jpg" alt="found at a small cafe in Rockwood TN">
                         <figcaption id="caption"> found at a small cafe in Rockwood TN </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/EGGs.jpg">
-                    <alt>
+                    <img id="tile" src="images/EGGs.jpg" alt="What happens when egg is boiled and slightly cracked">
                         <figcaption id="caption"> What happens when an egg is boiled and slightly cracked </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/Healthy.jpg">
-                    <alt>
+                    <img id="tile" src="images/Healthy.jpg" alt="Salmon Dinner">
                         <figcaption id="caption"> Salmon dinner </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/pineapple.jpg">
-                    <alt>
+                    <img id="tile" src="images/pineapple.jpg" alt="Fruit salad in a pine">
                         <figcaption id="caption"> Fruit salad in a pineapple </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/pizza.jpg">
-                    <alt>
+                    <img id="tile" src="images/pizza.jpg" alt="Pizza on a too small pan">
                         <figcaption id="caption"> Pizza on a too small pan </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/Veggies.jpg">
-                    <alt>
+                    <img id="tile" src="images/Veggies.jpg" alt="Cooked Veggies">
                         <figcaption id="caption"> Cooked Veggies </figcaption>
-                    </alt>
                 </div>
             </figure>
             <figure id="figure">
                 <div id="george">
-                    <img id="tile" src="images/SamonA.jpg">
-                    <alt>
+                    <img id="tile" src="images/SamonA.jpg" alt="Lemon Salmon">
                         <figcaption id="caption"> Lemon Salmon</figcaption>
-                    </alt>
                 </div>
             </figure>
         </div>
