Making it the same

--- a/forms.html
+++ b/forms.html
@@ -23,76 +23,19 @@
     <!--Navagation-->
     <nav id="navbar" class="navbar">
         <ul id="navlist" class="im">
-            <li class="active"><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="index.html"> Home </a></li>
             <li><a class="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
             <li><a class="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
             <li><a class="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
             <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
             <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li class="active"><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
     <!--Main-->
     <main>
 
-        <p>Learning to cook has always been something I have tried to do and lately I have gotten to the point where I
-            can cook if I have a well written recipe but it doesn't always turn out and that's where mom comes in. She
-            has been cooking for a long time first when she was learning to cook and now teaching all those who ask how.
-            One of the great things she has with her cooking is that she can cook for anyone no matter the limitations
-            they have with food. This is where we will be making recipes and putting them up so that everyone can learn
-            how to cook. </p>
-        <p></p>
-        <p> 5 reasons why I am learning to cook for food limitations</p>
-        <div id="monkey">
-            <ol class="list" id="list">
-                <li>I have my own food limitations</li>
-                <li>It is always nice to be able to cook for anyone</li>
-                <li>I need to learn how to cook</li>
-                <li>As more people are choicing to eat in different ways I will need to be able to cook for them </li>
-                <li>It is healthier to cook</li>
-            </ol>
-            <figure>
-            <div id="george">
-                <img id="food" src="images/Temaki_HERO_021320_440.jpg">
-                <figcaption id="caption"> found at https://www.epicurious.com/ </figcaption>
-            </div>
-        </div>
-    </figure>
-        <p class="links"> Before we start we should mention that all the recipes here are made for people who are <a
-                href="vegan.html#vegan">Vegan</a>, <a href="vegetarian.html#vegetarian">Vegetarian</a>, <a
-                href="dairyfree.html#dairy">Dairy Free</a>, and <a href="glutenfree.html#Gluten">Gluten Free</a>. If you
-            have questions about health and eating any of these ways you can visit <a
-                href="https://www.health.harvard.edu/staying-healthy/becoming-a-vegetarian" target='_blank'>This Harvard
-                website to find more about vegetarian</a> or <a
-                href="https://www.researchgate.net/profile/Richard_Kahn3/publication/240595840_The_Way_We_Eat_Why_Our_Food_Choices_Matter_By_Peter_Singer_and_Jim_Mason_Published_by_Rodale_May_2006_2595_US3495_CAN_ISBN_1-57954-889-X_288_pages/links/00b4951e77368e50ea000000/The-Way-We-Eat-Why-Our-Food-Choices-Matter-By-Peter-Singer-and-Jim-Mason-Published-by-Rodale-May-2006-2595-US-3495-CAN-ISBN-1-57954-889-X-288-pages.pdf"
-                target='_blank'> to see how our eating choices matter.</a>
-        </p>
-        <p>Some of the recipes that will be on each page are</p>
-        <ul id="what" class="list">
-            <li>breakfast recipes</li>
-            <li>lunch recipes</li>
-            <li>dinner recipes</li>
-            <li>snack recipes</li>
-            <li>dessert recipes</li>
-        </ul>
-        <p>Quick last word</p>
-        <dl>
-            <dt>Some of the recipes we have used and that will be on this site was found online so we will be linking
-                where we found the original recipe.</dt>
-            <dd> You can reach the original recipes by clicking on the title on the recipe</dd>
-        </dl>
-        <p><strong>From our kitchen to yours,</strong></p>
-        <p><em>Anne and Mariah</em><br>
-            <em> Cooking like mom</em> <br>
-            <a href="mailto:quiency3.14@gmail.com"> Any questions send us an email at quiency3.14@gmail.com</a>
-        </p>
-        <div>
-            <iframe sandbox="allow-scripts allow-same-origin" id="1187ce8b7be540e5" frameborder="0"
-                allowtransparency="true" marginheight="0" marginwidth="0" width="0" hspace="0" vspace="0" height="0"
-                style="height:0px;width:0px;display:none;" scrolling="no"
-                src="https://cdn.connectad.io/connectmyusers.php">
-            </iframe>
-        </div>
     </main>
 </body>
 <!--Footer-->
