--- a/gallery.html
+++ b/gallery.html
@@ -28,6 +28,7 @@
             <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
             <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
             <li class="active"><a class="current" href="gallery.html"> Gallery</a></li>
+            <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
     <main>
