--- a/vegan.html
+++ b/vegan.html
@@ -26,6 +26,7 @@
             <li class = "active"><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
             <li><a class ="current" href="Reg.html"> Regular Recipes </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
