I can't get this to work

--- a/forms.html
+++ b/forms.html
@@ -36,7 +36,7 @@
     <!--Main-->
     <main>
         <h1> Get Our Updates!!!</h1>
-        <form action="FormToEmail.php" method="post" enctype="multipart/form-data" name="attend" class="conference">
+        <form action="FormToEmail.php" method="post" enctype="multipart/form-data" name="attend" class="IHATETHIS">
             <fieldset>
                 <legend> Personal Info</legend>
                 <label>
@@ -64,8 +64,8 @@
                     <input name="why" type="text" placeholder="because...." required class="userinfo">
                 </label>
                 <div class="button" id="button">
-                <button>Submit</button>
-            </div>
+                    <button>Submit</button>
+                </div>
             </fieldset>
         </form>
     </main>
