--- a/forms.html
+++ b/forms.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
     </style>
-    <link href="/css files/style.css" rel="stylesheet">
+    <link href="/css files/forms.css" rel="stylesheet">
     <title>Learning to Cook like Mom</title>
 </head>
 <!--Body-->
