I HAVE NO IDEA WHAT I AM DOING

--- a/forms.html
+++ b/forms.html
@@ -36,7 +36,7 @@
     <!--Main-->
     <main>
         <h1> Get Our Updates!!!</h1>
-        <form action="FormToEmail.php" method="post" enctype="multipart/form-data" name="attend" class="IHATETHIS">
+        <form action="thanks.html" method="post" enctype="multipart/form-data" name="attend" class="IHATETHIS">
             <fieldset>
                 <legend> Personal Info</legend>
                 <label>
