--- a/forms.html
+++ b/forms.html
@@ -51,7 +51,8 @@
                 <legend></legend>
                 <label>
                     <span>*Number:</span>
-                    <input name="telphone" type="text" placeholder="000-000-000" required class="userinfo">
+                    <input name="telphone" type="tel" id="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}"
+                        placeholder="000-000-000" required class="userinfo">
                 </label>
                 <legend></legend>
                 <label for="si/no">Are you learning to cook?</label>
@@ -66,12 +67,31 @@
                     <span>*Why you want our updates:</span>
                     <input name="why" type="text" placeholder="because...." required class="userinfo">
                 </label>
-                <input type="checkbox" id="r1" name="r1" value="want">
-                <label for="r1"> I want recipes sent to me</label><br>
-                <input type="checkbox" id="r2" name="r2" value="allergies">
-                <label for="r2"> I have food limitations</label><br>
-                <input type="checkbox" id="r3" name="r3" value="Boat">
-                <label for="r3"> I like desserts</label><br>
+                <label for="r1">
+                    <input type="checkbox" id="r1" name="r1" value="want">
+                    I want recipes sent to me</label>
+                <label for="r2">
+                    <input type="checkbox" id="r2" name="r2" value="allergies">
+                    I have food limitations</label>
+                <label for="r3">
+                    <input type="checkbox" id="r3" name="r3" value="FOOD">
+                    I like desserts</label>
+                <h2>What are your eating habits?</h2>
+                <label for="dairyfree">
+                    <input type="radio" id="food limitations" name="limits" value="dairyfree">
+                    Dairy free</label>
+                <label for="glutenfree">
+                    <input type="radio" id="food limitations" name="limits" value="glutenfree">
+                    Gluten Free</label>
+                <label for="vegetarian">
+                    <input type="radio" id="food limitations" name="limits" value="vegetarian">
+                    Vegetarian</label>
+                <label for="vegan">
+                    <input type="radio" id="food limitations" name="limits" value="vegan">
+                    Vegan</label>
+                    <label for="reg">
+                        <input type="radio" id="food limitations" name="limits" value="reg">
+                        I eat like a noraml human</label>
                 <div class="button" id="button">
                     <button>Submit</button>
                 </div>
