--- a/forms.html
+++ b/forms.html
@@ -49,10 +49,9 @@
                     <input name="email" type="email" placeholder="Your email" required class="userinfo">
                 </label>
                 <legend></legend>
-                <label for="phone">
-                    <span>*Number:</span>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}" placeholder="000-000-0000">
-                </label>
+                <label for="phone">Enter your phone number
+                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
+            </label>
                 <legend></legend>
                 <label for="si/no">Are you learning to cook?</label>
                 <select id="si/no">
