working on getting the button to link

--- a/forms.html
+++ b/forms.html
@@ -50,8 +50,8 @@
                 </label>
                 <legend></legend>
                 <label for="phone">Enter your phone number
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{2}-[0-9]{3}">
-            </label>
+                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}">
+                </label>
                 <legend></legend>
                 <label for="si/no">Are you learning to cook?</label>
                 <select id="si/no">
@@ -91,7 +91,7 @@
                     <input type="radio" id="food limitations" name="limits" value="reg">
                     I eat like a noraml human</label>
                 <div class="button" id="button">
-                    <button>Submit</button>
+                   <a href="thanks.html"><button>Submit</button></a>
                 </div>
             </fieldset>
         </form>
