trying to get the button to work

--- a/forms.html
+++ b/forms.html
@@ -91,7 +91,7 @@
                     <input type="radio" id="food limitations" name="limits" value="reg">
                     I eat like a noraml human</label>
                 <div class="button" id="button">
-                   <a href="thanks.html"><button>Submit</button></a>
+                   <a class="project-tile" id="profile-link" href="thanks.html"><button>Submit</button></a>
                 </div>
             </fieldset>
         </form>
