--- a/forms.html
+++ b/forms.html
@@ -66,8 +66,10 @@
                     <input name="why" type="text" placeholder="because...." required class="userinfo">
                 </label>
                 <label for="r1">
+                    <h2>Check all that apply</h2>
                     <input type="checkbox" id="r1" name="r1" value="want">
-                    I want recipes sent to me</label>
+                    I want recipes sent to me
+                </label>
                 <label for="r2">
                     <input type="checkbox" id="r2" name="r2" value="allergies">
                     I have food limitations</label>
@@ -91,7 +93,7 @@
                     <input type="radio" id="food limitations" name="limits" value="reg">
                     I eat like a noraml human</label>
                 <div class="button" id="button">
-                   <a class="project-tile" id="profile-link" href="thanks.html"><button>Submit</button></a>
+                    <a href="thanks.html"><button>Submit</button></a>
                 </div>
             </fieldset>
         </form>
