--- a/forms.html
+++ b/forms.html
@@ -93,7 +93,7 @@
                     <input type="radio" id="food limitations" name="limits" value="reg">
                     I eat like a noraml human</label>
                 <div class="button" id="button">
-                    <a href="thanks.html"><button>Submit</button></a>
+                    <a href="thanks.html"><button type="button">Submit</button></a>
                 </div>
             </fieldset>
         </form>
