I GOT IT TO WORK!!!!

--- a/thanks.html
+++ b/thanks.html
@@ -9,7 +9,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
     </style>
-    <link href="/css files/thanks.css" rel="stylesheet">
+    <link href="/css files/style.css" rel="stylesheet">
     <title>Learning to Cook like Mom</title>
 </head>
 <!--Body-->
