Trying to get the textarea center

--- a/forms.html
+++ b/forms.html
@@ -92,6 +92,9 @@
                 <label for="reg">
                     <input type="radio" id="food limitations" name="limits" value="reg">
                     I eat like a noraml human</label>
+                <label for="w3mission"> <h2> Write suggestions for us! </h2>
+                    <textarea id="w3mission" rows="4" cols="50"> </textarea>
+                </label>
                 <div class="button" id="button">
                     <a href="thanks.html"><button type="button">Submit</button></a>
                 </div>
