wrapper div and max and min width

--- a/Reg.html
+++ b/Reg.html
@@ -30,6 +30,7 @@
         </ul>
     </nav>
     <!--DAIRYFREE PAGE LINK-->
+    <div class = "wrapper" id = "wrapper">
     <main>
         <h2 id="REG"> Our regular recipes (with notes of how we change to suit our needs)</h2>
         
@@ -39,6 +40,7 @@
         <h2 class = "Header">Dinner Recipes</h2>
         <h2 class = "Header">Snack Recipes</h2>
         <h2 class = "Header">Dessert Recipes</h2>
+    </div>
     </main>
 </body>
 <!--Footer-->
