--- a/forms.html
+++ b/forms.html
@@ -35,6 +35,7 @@
     </nav>
     <!--Main-->
     <main>
+        <div class = "wrapper" id = "wrapper">
         <h1> Get Our Updates!!!</h1>
         <form action="thanks.html" method="post" enctype="multipart/form-data" name="attend" class="IHATETHIS">
             <fieldset>
@@ -100,6 +101,7 @@
                 </div>
             </fieldset>
         </form>
+        </div>
     </main>
 </body>
 <!--Footer-->
