--- a/gallery.html
+++ b/gallery.html
@@ -32,6 +32,7 @@
         </ul>
     </nav>
     <main>
+        <div class = "wrapper" id = "wrapper">
         <div id="projectgrid" class="images">
             <figure id="figure">
                 <div id="george">
@@ -99,6 +100,7 @@
                         <figcaption id="caption"> Lemon Salmon</figcaption>
                 </div>
             </figure>
+        </div>
         </div>
     </main>
 </body>
