--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
     <!--Main-->
     <main>
-
+        <div class = "wrapper" id = "wrapper">
         <p>Learning to cook has always been something I have tried to do and lately I have gotten to the point where I
             can cook if I have a well written recipe but it doesn't always turn out and that's where mom comes in. She
             has been cooking for a long time first when she was learning to cook and now teaching all those who ask how.
@@ -95,6 +95,7 @@
             </iframe>
         </div>
     </main>
+</div>
 </body>
 <!--Footer-->
 <footer>
