--- a/thanks.html
+++ b/thanks.html
@@ -36,11 +36,12 @@
     </nav>
     <!--Main-->
     <main>
-
+        <div class = "wrapper" id = "wrapper">
         <p>Thanks for signing up for our Emails and updates! We will be letting you know what we are up to soon! </p>
         <p><strong>From our kitchen to yours,</strong></p>
         <p><em>Anne and Mariah</em><br>
     </main>
+</div>
 </body>
 <!--Footer-->
 <footer>
