--- a/vegan.html
+++ b/vegan.html
@@ -31,6 +31,7 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
+        <div class = "wrapper" id = "wrapper">
         <h2 id="dairy"> Why to cook Vegan</h2>
         <p>Find out why to cook vegan other than allergies. Before I list <strong> MY </strong> I would like to say I have
             nothing against eating meat/animal products.</p>
@@ -46,6 +47,7 @@
         <h2 class = "Header">Dinner Recipes</h2>
         <h2 class = "Header">Snack Recipes</h2>
         <h2 class = "Header">Dessert Recipes</h2>
+        </div>
     </main>
 </body>
 <!--Footer-->
