--- a/vegetarian.html
+++ b/vegetarian.html
@@ -31,6 +31,7 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
+        <div class = "wrapper" id = "wrapper">
         <h2 id="dairy"> Why to cook Vegetarian</h2>
         <p>Find out why to cook Vegetarian other than allergies. Before I list <strong> MY </strong> reason I would like
             to say I have
@@ -55,6 +56,7 @@
         <p>All you need to do is cut and prepare the celery then put peanut butter through the middle of the groove of
             the celery, until you have the amount you like, then sprinkle the raisins on top of the peanut butter</p>
         <h2 class = "Header">Dessert Recipes</h2>
+    </div>
     </main>
 </body>
 <!--Footer-->
