--- a/dairyfree.html
+++ b/dairyfree.html
@@ -31,6 +31,7 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
+        <div class = "wrapper" id = "wrapper">
         <h2 id="dairy"> Why to cook Dairy Free</h2>
         <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against eating and drinking dairy products.</p>
@@ -47,6 +48,7 @@
         <h2 class = "Header">Dinner Recipes</h2>
         <h2 class = "Header">Snack Recipes</h2>
         <h2 class = "Header">Dessert Recipes</h2>
+        </div>
     </main>
 </body>
 <!--Footer-->
