--- a/glutenfree.html
+++ b/glutenfree.html
@@ -31,6 +31,7 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
+        <div class = "wrapper" id = "wrapper">
         <h2 id="dairy"> Why to cook Gluten Free</h2>
         <p>Find out why to cook gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against bread and carbs.</p>
@@ -46,6 +47,7 @@
         <h2 class = "Header">Snack Recipes</h2>
         <h2 class = "Header">Dessert Recipes</h2>
     </main>
+</div>
 </body>
 <!--Footer-->
 <footer>
