--- a/glutenfree.html
+++ b/glutenfree.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
-    <link href="/css files/dairy.css" rel="stylesheet">
+    <link href="/css files/gluten.css" rel="stylesheet">
     <title>Gluten Free Recipes</title>
 </head>
 
@@ -36,6 +36,11 @@
         <p>Find out why to cook gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against bread and carbs.</p>
         <ul id ="why">
+            <li>allows the stomach to calm easier</li>
+            <li>is healthier for some people</li>
+            <li>I honestly I don't much why other than allergies</li>
+        </ul>
+        <ul id ="who">
             <li>allows the stomach to calm easier</li>
             <li>is healthier for some people</li>
             <li>I honestly I don't much why other than allergies</li>
