--- a/vegetarian.html
+++ b/vegetarian.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
-    <link href="/css files/dairy.css" rel="stylesheet">
+    <link href="/css files/vegan.css" rel="stylesheet">
     <title>Vegetarian Recipes</title>
 </head>
 
