--- a/dairyfree.html
+++ b/dairyfree.html
@@ -36,10 +36,10 @@
         <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against eating and drinking dairy products.</p>
         <ul id ="why">
-            <li>helps prevents headaches</li>
-            <li>allows healthy digestion</li>
-            <li>allows more energy (especially for those who are allergic)</li>
-            <li>gives a reason to keep other forms of "milk" in business</li>
+            <li id = "what">helps prevents headaches</li>
+            <li id = "what">allows healthy digestion</li>
+            <li id = "what">allows more energy (especially for those who are allergic)</li>
+            <li id = "what">gives a reason to keep other forms of "milk" in business</li>
         </ul>
         
         <!--Recipes sections-->
