--- a/vegan.html
+++ b/vegan.html
@@ -36,10 +36,10 @@
         <p>Find out why to cook vegan other than allergies. Before I list <strong> MY </strong> I would like to say I have
             nothing against eating meat/animal products.</p>
         <ul id ="why">
-            <li>Is healthier for some people</li>
-            <li>helps get enough nutrients but you will need to watch this</li>
-            <li>allows more energy (especially for those who are allergic)</li>
-            <li>gives a reason to keep other forms of "milk" in business</li>
+            <li id ="what">Is healthier for some people</li>
+            <li id ="what">helps get enough nutrients but you will need to watch this</li>
+            <li id ="what">allows more energy (especially for those who are allergic)</li>
+            <li id ="what">gives a reason to keep other forms of "milk" in business</li>
         </ul>
         <!--Recipes sections-->
         <h2 class = "Header">Breakfast Recipes</h2>
