--- a/GF & DF.html
+++ b/GF & DF.html
@@ -8,7 +8,7 @@
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
-    <link href="/css files/gluten.css" rel="stylesheet">
+    <link href="/css files/GF & DF.css" rel="stylesheet">
     <title>Gluten Free Recipes</title>
 </head>
 
@@ -17,15 +17,15 @@
         <h1>Mom's Gluten Free Recipes</h1>
     </header>
     <!--Navagation-->
-    <nav id="navbar" class ="navbar">
-        <ul id="navlist" >
-            <li><a  class ="current" href="index.html"> Home </a></li>
-            <li><a class ="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li><a class ="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li class = "active"><a class ="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li><a class ="current" href="vegan.html"> Vegan Recipes </a></li>
-            <li><a class ="current" href="Reg.html"> Regular Recipes </a></li>
+    <nav id="navbar" class="navbar">
+        <ul id="navlist" class="im">
+            <li><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
+            <li class="active"><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
+            <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li><a class="current" href="W2G.html"> Where to Go </a></li>
             <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
