--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <nav id="navbar" class="navbar">
         <ul id="navlist" class="im">
             <li class="active"><a class="current" href="index.html"> Home </a></li>
-            <li><a class="current" href="dairyfree.html"> Dairy Free Recipes </a></li>
-            <li><a class="current" href="vegetarian.html"> Vegetarian Recipes </a></li>
-            <li><a class="current" href="glutenfree.html"> Gluten Free Recipes </a></li>
-            <li><a class="current" href="vegan.html"> Vegan Recipes </a></li>
+            <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
+            <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
             <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
             <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li><a class="current" href="W2G.html"> Where to Go </a></li>
             <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
     </nav>
