Making it pretty

--- a/FSTD.html
+++ b/FSTD.html
@@ -9,47 +9,30 @@
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
         </style>
     <link href="/css files/FSTD.css" rel="stylesheet">
-    <title>Dairy Free Recipes</title>
+    <title>Gluten Free Recipes</title>
 </head>
 
 <body>
     <header>
-        <h1>Mom's Dairy Free Recipes</h1>
+        <h1>Fun Stuff To Do while Cooking</h1>
     </header>
-   <!--Navagation-->
-   <nav id="navbar" class="navbar">
-    <ul id="navlist" class="im">
-        <li><a class="current" href="index.html"> Home </a></li>
-        <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
-        <li><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
-        <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
-        <li  class="active"><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
-        <li><a class="current" href="gallery.html"> Gallery</a></li>
-        <li><a class="current" href="W2G.html"> Where to Go </a></li>
-        <li><a class="current" href="forms.html"> Forms</a></li>
-    </ul>
-</nav>
-    <!--DAIRYFREE PAGE LINK-->
-    <main>
-        <div class = "wrapper" id = "wrapper">
-        <h2 id="dairy"> Why to cook Dairy Free</h2>
-        <p>Find out why to cook dairy free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
-            nothing against eating and drinking dairy products.</p>
-        <ul id ="why">
-            <li id = "what">helps prevents headaches</li>
-            <li id = "what">allows healthy digestion</li>
-            <li id = "what">allows more energy (especially for those who are allergic)</li>
-            <li id = "what">gives a reason to keep other forms of "milk" in business</li>
+    <!--Navagation-->
+    <nav id="navbar" class="navbar">
+        <ul id="navlist" class="im">
+            <li><a class="current" href="index.html"> Home </a></li>
+            <li><a class="current" href="V&V.html"> Vegetarian & Vegan Recipes </a></li>
+            <li class="active"><a class="current" href="GF & DF.html"> Gluten Free & Dairy Free Recipes </a></li>
+            <li><a class="current" href="Reg.html"> Regular Recipes </a></li>
+            <li><a class="current" href="FSTD.html"> Fun Things to Do </a></li>
+            <li><a class="current" href="gallery.html"> Gallery</a></li>
+            <li><a class="current" href="W2G.html"> Where to Go </a></li>
+            <li><a class="current" href="forms.html"> Forms</a></li>
         </ul>
-        
-        <!--Recipes sections-->
-        <h2 class = "Header">Breakfast Recipes</h2>
-        <h2 class = "Header">Lunch Recipes</h2>
-        <h2 class = "Header">Dinner Recipes</h2>
-        <h2 class = "Header">Snack Recipes</h2>
-        <h2 class = "Header">Dessert Recipes</h2>
-        </div>
+    </nav>
+    <main>
+        <div class = "wrapper" id = "wrapper"></div>
     </main>
+</div>
 </body>
 <!--Footer-->
 <footer>
