--- a/V&V.html
+++ b/V&V.html
@@ -7,9 +7,9 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <style>
         @import url('https://fonts.googleapis.com/css?family=Open+Sans&display=swap');
-        </style>
+    </style>
     <link href="/css files/V&V.css" rel="stylesheet">
-    <title>Vegetarian Recipes</title>
+    <title>Vegetarian and Vegan Recipes</title>
 </head>
 
 <body>
@@ -31,36 +31,46 @@
     </nav>
     <!--DAIRYFREE PAGE LINK-->
     <main>
-        <div class = "wrapper" id = "wrapper">
-        <h2 id="dairy"> Why to cook Vegetarian</h2>
-        <p>Find out why to cook Vegetarian other than allergies. Before I list <strong> MY </strong> reason I would like
-            to say I have
-            nothing against eating meat/animal products.</p>
-        <ul id="why">
-            <li>It the green stuff we are supposed to eat</li>
-            <li>Veggies have the needed nutrients that we need</li>
-            <li>allows more energy becasue you get more nutrients</li>
-        </ul>
-        <!--Recipes sections-->
-        <h2 class = "Header">Breakfast Recipes</h2>
-        <h2 class = "Header">Lunch Recipes</h2>
-        <h2 class = "Header">Dinner Recipes</h2>
-        <h2 class = "Header">Snack Recipes</h2>
-        <h4>
-            Ants on a Log???
-        </h4>
-        <p> <em>Growing up this was how my mom got me to eat a healthy snack. My mom knew I struggled eating healthy
-                snacks so as I ate the snack she would tell me stories about how the "ants" got stuck in the peanut
-                butter or about how the "ants" were going on an adventure in a boat.</em></p>
-        <p>What you will need is celery, peanut butter, and raisins.</p>
-        <p>All you need to do is cut and prepare the celery then put peanut butter through the middle of the groove of
-            the celery, until you have the amount you like, then sprinkle the raisins on top of the peanut butter</p>
-        <h2 class = "Header">Dessert Recipes</h2>
-    </div>
+        <div class="wrapper" id="wrapper">
+            <h2 id="dairy"> Why to cook Vegetarian or Vegan</h2>
+            <p>Find out why to cook Vegetarian or Vegan other than allergies. Before I list <strong> MY </strong> reason
+                I would like
+                to say I have nothing against eating meat/animal products.</p>
+            <ul id="why">
+                <li>It the green stuff we are supposed to eat</li>
+                <li>Veggies have the needed nutrients that we need</li>
+                <li>allows more energy becasue you get more nutrients</li>
+                <li>There are a lot of health benifits that I don't know about</li>
+            </ul>
+            <!--Recipes sections-->
+            <h2 class="Header">Breakfast Recipes</h2>
+            <h4>
+                Oatmeal
+            </h4>
+            <p> <em>There are a lot of ways to cook oatmeal. I have done it in the crockpot, in a microwave, on a stove,
+                    and honestly I have accidently eatten it with Orange Juice. This is good to eat when you make it
+                    yourself or even with just the packets.</em></p>
+            <h2 class="Header">Lunch Recipes</h2>
+            <h2 class="Header">Dinner Recipes</h2>
+            <h2 class="Header">Snack Recipes</h2>
+            <h4>
+                Ants on a Log???
+            </h4>
+            <p> <em>Growing up this was how my mom got me to eat a healthy snack. My mom knew I struggled eating healthy
+                    snacks so as I ate the snack she would tell me stories about how the "ants" got stuck in the peanut
+                    butter or about how the "ants" were going on an adventure in a boat.</em></p>
+            <p>What you will need is celery, peanut butter, and raisins.</p>
+            <p>All you need to do is cut and prepare the celery then put peanut butter through the middle of the groove
+                of
+                the celery, until you have the amount you like, then sprinkle the raisins on top of the peanut butter
+            </p>
+            <h2 class="Header">Dessert Recipes</h2>
+        </div>
     </main>
 </body>
 <!--Footer-->
 <footer>
     <h5> ©2020 ∙ Built by Mariah for DGM 2120</h5>
 </footer>
+
 </html>
