--- a/GF & DF.html
+++ b/GF & DF.html
@@ -32,10 +32,15 @@
     <!--DAIRYFREE PAGE LINK-->
     <main>
         <div class = "wrapper" id = "wrapper">
-        <h2 id="dairy"> Why to cook Gluten Free</h2>
-        <p>Find out why to cook gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
+        <h2 id="dairy"> Why to cook Dairy Free or Gluten Free</h2>
+        <p>Find out why to cook dairy free or gluten free other than allergies. Before I list <strong> MY </strong> reason I would like to say I have
             nothing against bread and carbs.</p>
-        <ul id ="why">
+        <ul id ="why"> Dairy Free
+            <li>helps prevents headaches/li>
+            <li>allows for healthy digestion</li>
+            <li>gives a reason to keep other forms of "milk" in business</li>
+        </ul>
+        <ul id ="who"> Gluten Free
             <li>allows the stomach to calm easier</li>
             <li>is healthier for some people</li>
             <li>I honestly I don't much why other than allergies</li>
